--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
   },
   "devDependencies": {
-    "gulp":"*",
-    "gulp-util": "*",
+    "gulp-util": "^3.0.1",
     "gulp-gh-pages": "~0.3.4"
   },
   "scripts": {
